# snippets

./: Comparator.hpp  FindProtobuf-c.cmake  Timer.hpp  algorithm_examples.cc  boost_property_example1.cpp  boost_property_example2.cpp  boost_property_example3.cpp  boost_property_example4.cpp  boost_property_example5.cpp  chat_client.cpp  check_if_number.cpp  client.cpp  compile_server  concatenate_tmpl.hpp  condition_variable_ex.cpp  delta.cc  forwarding.cpp  gtest_hello_world.cpp  input.txt  io_service  io_service.cpp  json.cpp  kv.grpc.pb.cc  kv.grpc.pb.h  kv.pb.cc  kv.pb.h  kv.proto  log.cpp  m3uaNetworkAppearance.hpp  m3uaTL.hpp  main.cpp  map.cpp  map_of_callables.cpp  map_of_vectors  map_of_vectors.cpp  memory_usage.cpp  my.json  my_state_machine.cpp  ncurses.example.cpp  parse_kmsd_config.cpp  (+24 more)
Logging/: SimpleLogger.cpp  sl
Scheduler/: EventScheduler.hpp  Scheduler.cpp  Scheduler_v2.cpp  example.cpp  test.cpp
TimerMap/: TimerMap.hpp  TimerMapController.hpp  main.cpp
asio_stream_descriptors/: Server.hpp  asio_example.hpp
asio_thread_pool_example/: main  main.cpp
base64/: base64.hpp
benchmarking/: bench_example.cpp  emplace_vs_insert.cpp
boost-json/: main.cpp
boost_echo/: echo_client.cpp  err  server.cpp
boost_stream/: server.cpp  t.sh
boost_third_party/: server.cpp  server_original.cpp
clock/: m  main.cpp
cmake_exp/: CMakeLists.txt  Dof.cmake
commmand_line/: CommandLineTool.hpp  Derived.hpp  main  main.cpp
configuration_reader/: Configuration.hpp  Configuration.inl  input.conf  input_full.conf  main.cpp  read_file_by_line.cpp
configuration_script/: Configuration.hpp  Configuration.inl  ConfigurationBase.hpp  ConfigurationBase.hpp.bk  ConfigurationBaseTemplates.hpp  benchmark.cpp  generate.sh  main.cpp  test.cpp
configuration_templates/: Configuration.hpp  Configuration.hpp17  Configuration_wproxy.hpp  main.cpp
event_loop/: EventLoop.hpp  main  main.cpp
file_conc_access/: FileAccess.cpp  shared_data.txt
go_training/: web.go
grpc_callback_example/: README.md  hello_world.cpp  hello_world.grpc.pb.cc  hello_world.grpc.pb.h  hello_world.pb.cc  hello_world.pb.h  hello_world.proto  hello_world_client.cpp
hashing/: superfast.cpp
hyperscan/: main.cpp
in-mem-cache/: main.cpp
json-like-string-function/: main.cpp  main_2.cpp
json_string_parse/: main  main.cpp  main_2.cpp  main_3.cpp  main_4.cpp
leader-election/: main.cpp
mean_value/: main  main.cpp
message_queue/: MessageQueue.hpp  main.cpp  main_ts.cpp  test.cpp
message_queue_wp/: MessageQueue.hpp  main.cpp  messages_main_file_0.txt  messages_main_file_1.txt  messages_main_file_2.txt  messages_main_file_3.txt
named_pipes/: p.c  pipe_read.c  ppp.c  (+1 more)
tracing_example_2/: CMakeLists.txt  cpptraced.ii  cpptraced.s  cpptraced.ss  ctraced.i  ctraced.s  ctraced.ss
(+76 files in other folders)
